Partial Product funtion view into classview

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -11,4 +11,6 @@
         <p>Description coming soon</p>
     {% endif %}
 
+    <p><a class="btn btn-info mb-4" href="{% url 'products:product_list_view' %}">Back to list</a>
+    <a class="btn btn-outline-danger mb-4" href="{% url 'products:product_delete_view' object.id %}">Delete</a></p>
 {% endblock content %}
